--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "core-js": "^3.38.1",
+    "fraction.js": "^5.0.6",
     "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.7"
   }
